// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Install statics installFns editorconfig 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/.editorconfig",
    "pathFileWrite": "/root/.editorconfig",
  },
]
`;

exports[`Install statics installFns eslint 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/tsconfig.eslint.json",
    "pathFileWrite": "/root/tsconfig.eslint.json",
  },
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/.eslintignore",
    "pathFileWrite": "/root/.eslintignore",
  },
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/config.eslintrc.js",
    "pathFileWrite": "/root/.eslintrc.js",
  },
]
`;

exports[`Install statics installFns git 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/gitignore",
    "pathFileWrite": "/root/.gitignore",
  },
]
`;

exports[`Install statics installFns husky 1`] = `
Object {
  "pathDirInput": "/root/.husky",
  "pathDirOutput": "/root/.husky",
}
`;

exports[`Install statics installFns jest 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/jest.config.js",
    "pathFileWrite": "/root/jest.config.js",
  },
]
`;

exports[`Install statics installFns prettier 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/.prettierrc.js",
    "pathFileWrite": "/root/.prettierrc.js",
  },
]
`;

exports[`Install statics installFns stylelint 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/.stylelintrc.js",
    "pathFileWrite": "/root/.stylelintrc.js",
  },
]
`;

exports[`Install statics installFns typescript 1`] = `
Array [
  Object {
    "overwrite": true,
    "pathFileInput": "/root/src/install/files/tsconfig.json",
    "pathFileWrite": "/root/tsconfig.json",
  },
]
`;

exports[`Install statics installFns vscode 1`] = `
Object {
  "pathDirInput": "/root/.vscode",
  "pathDirOutput": "/root/.vscode",
}
`;
